<resources>
    <string name="app_name">LineUp2025</string>
    <string name="line">Line</string>
    <string name="up">Up</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="zeal_id">Zeal ID</string>
    <string name="password">Password</string>
    <string name="log_in_to_n_your_account">Log in to\n your account</string>
    <string name="register_now_nto_start_playing">Register now\nto start playing</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_your_n_avatar">Choose your \n Avatar</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="read_the_rules">Read the Rules</string>
    <string name="we_need_your_help">WE NEED YOUR HELP!\n</string>
    <string name="rule_1">We’re on the lookout for other players, and so far, you’re our only hope.</string>
    <string name="rule_2">Show the QR code to your band members.</string>
    <string name="rule_3">Use radar to find rest of the players , scan their QRs and ascend the leaderboard.</string>
    <string name="rule_4">Keep you location turned on :)</string>
    <string name="rule_5">Map refreshes automatically every 5 seconds, manual refresh can be done via button click.</string>
    <string name="my_qr_code">My QR Code\n</string>
    <string name="leaderboard">Leaderboard</string>
</resources>