<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RulesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/lineupSymbol"
            layout="@layout/lineup_symbol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/read_rule_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/read_the_rules"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:layout_constraintTop_toBottomOf="@id/lineupSymbol" />

        <TextView
            android:id="@+id/hey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="Hey"
            app:layout_constraintTop_toBottomOf="@id/read_rule_txt"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/help_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/we_need_your_help"
            app:layout_constraintTop_toBottomOf="@+id/hey"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/bullet1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="•"
            app:layout_constraintTop_toTopOf="@id/rule_1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/rule_1"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/rule_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/rule_1"
            app:layout_constraintTop_toBottomOf="@id/help_txt"
            app:layout_constraintLeft_toRightOf="@id/bullet1"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/bullet2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="•"
            app:layout_constraintTop_toBottomOf="@id/rule_1"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/rule_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/rule_2"
            app:layout_constraintTop_toBottomOf="@id/rule_1"
            app:layout_constraintLeft_toRightOf="@id/bullet1"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/bullet3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="•"
            app:layout_constraintTop_toBottomOf="@id/rule_2"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/rule_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/rule_3"
            app:layout_constraintTop_toBottomOf="@id/rule_2"
            app:layout_constraintLeft_toRightOf="@id/bullet1"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/bullet4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="•"
            app:layout_constraintTop_toBottomOf="@id/rule_3"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/rule_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/rule_4"
            app:layout_constraintTop_toBottomOf="@id/rule_3"
            app:layout_constraintLeft_toRightOf="@id/bullet1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/bullet4"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/bullet5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="•"
            app:layout_constraintTop_toBottomOf="@id/rule_4"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/rule_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/rule_5"
            app:layout_constraintTop_toBottomOf="@id/rule_4"
            app:layout_constraintLeft_toRightOf="@id/bullet1"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_bar"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:background="@drawable/ellipse"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/finish_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/finish"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <ImageButton
                android:id="@+id/next_btn"
                android:layout_width="46dp"
                android:layout_height="28dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_bg"
                android:src="@drawable/next_arrow"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>