<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.signup.ui.Activity_Register">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signUpRel"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/navBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="32dp">

            <include
                layout="@layout/lineup_symbol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/register_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/register_now"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/start_playing_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/to_start_playing"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="35sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/info_bg"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/name"
                android:inputType="textFilter"
                android:maxLines="1"
                android:padding="20dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/info_bg"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="20dp"
                android:singleLine="true"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/zeal"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/info_bg"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/zeal_id"
                android:maxLines="1"
                android:padding="20dp"
                android:singleLine="true"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:background="@drawable/info_bg"
                    android:fontFamily="@font/montserrat_medium"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="20dp"
                    android:singleLine="true"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ellipse"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/reg_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/montserrat_medium"
            android:onClick="Registration"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/regtbtn"
            android:layout_width="46dp"
            android:layout_height="24dp"
            android:layout_gravity="end"
            android:layout_marginEnd="32dp"
            android:onClick="Registration"
            android:background="@drawable/button_bg"
            android:src="@drawable/next_arrow"
            android:textColor="@color/white" />
    </androidx.appcompat.widget.Toolbar>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
